--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,7 +10,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest, macOS-latest]
+        os: [macOS-latest, ubuntu-latest, windows-latest]
         node-version: [13.x]
 
     runs-on: ${{ matrix.os }}
