--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -32,6 +32,16 @@ jobs:
           # prettier-ignore
           key: ${{ runner.os }}-esy-${{ hashFiles(format('{0}{1}', github.workspace, '/esy.lock/index.json')) }}
 
+      - name: Get npm cache directory
+        id: npm
+        run: echo "::set-output name=dir::$(npm config get cache)"
+
+      - name: Restore npm cache
+        uses: actions/cache@v1
+        with:
+          path: ${{ steps.npm.outputs.dir }}
+          key: ${{ runner.os }}-npm
+
       - name: Install esy
         run: npm install --global esy
 
