--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -36,11 +36,15 @@ jobs:
         id: npm
         run: echo "::set-output name=dir::$(npm config get cache)"
 
+      - name: Get esy version
+        id: esy-version
+        run: echo "::set-output name=version::$(npm info esy version)"
+
       - name: Restore npm cache
-        uses: actions/cache@v1
+        uses: actions/cache@v1.1.0
         with:
           path: ${{ steps.npm.outputs.dir }}
-          key: ${{ runner.os }}-npm
+          key: ${{ runner.os }}-npm-${{ steps.esy-version.outputs.version }}
 
       - name: Install esy
         run: npm install --global esy
