--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -35,6 +35,8 @@ jobs:
           path: ~/.esy
           # prettier-ignore
           key: ${{ runner.os }}-esy-${{ hashFiles(format('{0}{1}', github.workspace, '/esy.lock/index.json')) }}
+          restore-keys: |
+            ${{ runner.os }}-esy-
 
       - name: Install esy
         run: npm install --global esy
