--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -8,18 +8,24 @@ permissions: read-all
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - macos-latest
+          - ubuntu-latest
+          - windows-latest
+
+    runs-on: ${{ matrix.os }}
 
     steps:
       - name: Checkout tree
         uses: actions/checkout@v4
 
       - name: Set-up OCaml
-        uses: ocaml/setup-ocaml@v2
+        uses: ocaml/setup-ocaml@v3
         with:
-          ocaml-compiler: "5.1"
-          allow-prerelease-opam: true
-          dune-cache: true
+          ocaml-compiler: "5.2"
 
       - run: opam install . --deps-only
 
@@ -35,10 +41,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set-up OCaml
-        uses: ocaml/setup-ocaml@v2
+        uses: ocaml/setup-ocaml@v3
         with:
-          ocaml-compiler: "5.1"
-          allow-prerelease-opam: true
-          dune-cache: true
+          ocaml-compiler: "5.2"
 
-      - uses: ocaml/setup-ocaml/lint-opam@v2
+      - uses: ocaml/setup-ocaml/lint-opam@v3
