--- a/re-tree.opam
+++ b/re-tree.opam
@@ -10,7 +10,8 @@ license: "ISC"
 homepage: "https://github.com/smorimoto/re-tree"
 bug-reports: "https://github.com/smorimoto/re-tree/issues"
 depends: [
-  "dune" {>= "3.14"}
+  "dune" {>= "3.16"}
+  "ocaml"
   "reason"
   "ocaml-lsp-server" {with-dev-setup}
   "odoc" {with-doc}
