Update GitHub Actions
Signed-off-by: Sora Morimoto <sora@morimoto.io>

--- a/.github/workflows/opam-dependency-submission.yml
+++ b/.github/workflows/opam-dependency-submission.yml
@@ -25,6 +25,6 @@ jobs:
       - name: Set-up OCaml
         uses: ocaml/setup-ocaml@v3
         with:
-          ocaml-compiler: "5.2"
+          ocaml-compiler: 5
 
       - uses: ocaml/setup-ocaml/analysis@v3
