--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,37 +12,28 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          - macos-latest
           - ubuntu-latest
+          - macos-latest
           - windows-latest
-
     runs-on: ${{ matrix.os }}
-
     steps:
       - name: Checkout tree
         uses: actions/checkout@v4
-
       - name: Set-up OCaml
         uses: ocaml/setup-ocaml@v3
         with:
-          ocaml-compiler: "5.2"
-
+          ocaml-compiler: 5
       - run: opam install . --deps-only
-
       - run: opam exec -- dune build @all
-
       - run: opam exec -- dune exec tree
 
   lint-opam:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout tree
         uses: actions/checkout@v4
-
       - name: Set-up OCaml
         uses: ocaml/setup-ocaml@v3
         with:
-          ocaml-compiler: "5.2"
-
+          ocaml-compiler: 5
       - uses: ocaml/setup-ocaml/lint-opam@v3
